Fix cards alignment, add to components documentation

--- a/css/scooter.css
+++ b/css/scooter.css
@@ -312,6 +312,7 @@ a,
   box-sizing: border-box;
   position: relative;
   display: inline-block;
+  vertical-align: top;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(37, 40, 43, 0.1);
