--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -20,6 +20,7 @@ $DBcard-background: #fff !default;
   box-sizing: border-box;
   position: relative;
   display: inline-block;
+  vertical-align: top;
 
   background-color: $DBcard-background;
   background-clip: padding-box;
